tools/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: signoz.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: signoz-frontend # The name of your service
            port:
              number: 3301     # The service port
